2002-02-24  Andras Varga

	* gned.cc: bugfix: gned.exe with WinMain() didn't accept command-line
        file arguments that contained backslashes

2001-10-06  Andras Varga

	* findrepl.tcl: regexp replace improved (\1,\2 in replace string now work
        as expected)

2001-09-01 Andras Varga

	* CONST_CAST() replaced by const_cast<>()

2001-07-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* parsened.cc (error): use macro CONST_CAST (defined at top of
	file) to avoid compilation errors with gcc-2.95.3
	* ebnf.y (addGate): CONST_CAST again

2001-07-11  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Makefile.vc (ebnf.tab.cc) (lex.yy.cc): use "copy" and "del" instead of "mv"

	*  (Repository):
	removed files: ebnf.tab.c lex.yy.c
	new files: ebnf.tab.cc lex.yy.cc

	* Makefile.in
	targets renamed:
		ebnf.tab.c  ->  ebnf.tab.cc
		lex.yy.c    ->  lex.yy.cc
	(ebnf.tab.cc): mv ebnf.tab.c to ebnf.tab.cc
	(lex.yy.cc): mv lex.yy.c to lex.yy.cc
	(lex.yy.o): renamed lex.yy.c to lex.yy.cc
	(ebnf.tab.o): renamed ebnf.tab.c to ebnf.tab.cc
	

	* Makefile.vc
	targets renamed:
		ebnf.tab.c  ->  ebnf.tab.cc
		lex.yy.c    ->  lex.yy.cc
	(ebnf.tab.cc): mv ebnf.tab.c to ebnf.tab.cc
	(lex.yy.cc): mv lex.yy.c to lex.yy.cc
	(lex.yy.obj): renamed lex.yy.c to lex.yy.cc
	(ebnf.tab.obj): renamed ebnf.tab.c to ebnf.tab.cc

	* Makefile.bc
	(ebnf.tab.obj): renamed ebnf.tab.c to ebnf.tab.cc
	(lex.yy.obj): renamed lex.yy.c to lex.yy.cc

2001-07-11 Andras Varga

	* ebnf.y: Eric Wu's Tru64/MPI port. Tru64 needs extra #includes.

2001-05-18  Andras Varga

	* ------ omnetpp-2.1 released ------

	* Windows: added rc file with icon

2001-05-02  Andras Varga

	* fixed Help|README when using compiled-in Tcl code

2001-04-20  Andras Varga

	* bugfix in new WinMain() startup code

2001-04-16  Andras Varga

	* GNED can now be compiled as GUI application (not console app) on
	Windows, setting USE_WINMAIN=yes in configuser.vc.  NOTE: main()
	and WinMain() use completely different startup sequences.  The