@@ -24,6 +24,7 @@ proc findReplaceDialog {w mode} {
     set tmp(case-sensitive)  $config(editor-case-sensitive)
     set tmp(whole-words)     $config(editor-whole-words)
     set tmp(regexp)          $config(editor-regexp)
+    set tmp(backwards)       $config(editor-backwards)
 
     # dialog should be child of the window which contains the text widget
     set dlg [winfo toplevel $w].dlg
@@ -58,6 +59,9 @@ proc findReplaceDialog {w mode} {
     checkbutton $dlg.f.words -text {whole words only} -variable tmp(whole-words)
     pack $dlg.f.words  -anchor w -side top
 
+    checkbutton $dlg.f.backwards -text {search backwards} -variable tmp(backwards)
+    pack $dlg.f.backwards  -anchor w -side top
+
     focus $dlg.f.find.e
 
     # exec the dialog, extract its contents if OK was pressed, then delete dialog
@@ -68,10 +72,12 @@ proc findReplaceDialog {w mode} {
         set case $tmp(case-sensitive)
         set words $tmp(whole-words)
         set regexp $tmp(regexp)
+        set backwards $tmp(backwards)
 
         set config(editor-case-sensitive) $case
         set config(editor-whole-words) $words
         set config(editor-regexp) $regexp
+        set config(editor-backwards) $backwards
         set config(editor-findstring) $findstring
 
         if {$mode == "replace"} {
@@ -83,9 +89,9 @@ proc findReplaceDialog {w mode} {
 
         # execute find/replace
         if {$mode == "find"} {
-            doFind $w $findstring $case $words $regexp
+            doFind $w $findstring $case $words $regexp $backwards
         } else {
-            doReplace $w $findstring $replstring $case $words $regexp
+            doReplace $w $findstring $replstring $case $words $regexp $backwards
         }
    }
    catch {destroy $dlg}
@@ -102,15 +108,16 @@ proc findNext {w} {
     set case         $config(editor-case-sensitive)
     set words        $config(editor-whole-words)
     set regexp       $config(editor-regexp)
+    set backwards    $config(editor-backwards)
 
-    doFind $w $findstring $case $words $regexp
+    doFind $w $findstring $case $words $regexp $backwards
 }
 
 # doFind --
 #
 #
-proc doFind {w findstring case words regexp} {
-    if {[_doFind $w $findstring $case $words $regexp] == ""} {
+proc doFind {w findstring case words regexp backwards} {
+    if {[_doFind $w $findstring $case $words $regexp $backwards] == ""} {
         tk_messageBox -parent [winfo toplevel $w] -title "Find" -icon warning \
                       -type ok -message "'$findstring' not found."
     }
@@ -123,34 +130,61 @@ proc doFind {w findstring case words regexp} {
 # Finds the given string, positions the cursor after its last char,
 # and returns the length. Returns empty string if not found.
 #
-proc _doFind {w findstring case words regexp} {
+proc _doFind {w findstring case words regexp backwards} {
 
     # remove previous highlights
     $w tag remove SELECT 0.0 end
 
     # find the string
     set cur "insert"
+    set initialcur $cur
     while 1 {
-        if {$case && $regexp} {
-            set cur [$w search -count length -regexp -- $findstring $cur end]
-        } elseif {$case} {
-            set cur [$w search -count length -- $findstring $cur end]
-        } elseif {$regexp} {
-            set cur [$w search -count length -nocase -regexp -- $findstring $cur end]
+        # do search
+        if {$backwards} {
+            if {$case && $regexp} {
+                set cur [$w search -count length -backwards -regexp -- $findstring $cur 1.0]
+            } elseif {$case} {
+                set cur [$w search -count length -backwards -- $findstring $cur 1.0]
+            } elseif {$regexp} {
+                set cur [$w search -count length -backwards -nocase -regexp -- $findstring $cur 1.0]
+            } else {
+                set cur [$w search -count length -backwards -nocase -- $findstring $cur 1.0]
+            }
         } else {
-            set cur [$w search -count length -nocase -- $findstring $cur end]
+            if {$case && $regexp} {
+                set cur [$w search -count length -regexp -- $findstring $cur end]
+            } elseif {$case} {
+                set cur [$w search -count length -- $findstring $cur end]
+            } elseif {$regexp} {
+                set cur [$w search -count length -nocase -regexp -- $findstring $cur end]
+            } else {
+                set cur [$w search -count length -nocase -- $findstring $cur end]
+            }
         }
+
+        # exit if not found
         if {$cur == ""} {
             break
         }
-        if {!$words} {
-            break
+
+        # allow exit loop only if we moved from initial cursor position
+        if {![$w compare "$cur  + $length chars" == $initialcur]} {
+            # if 'whole words' and we are not at beginning of a word, continue searching
+            if {!$words} {
+                break
+            }
+            if {[$w compare $cur == "$cur wordstart"] && \
+                [$w compare "$cur + $length char" == "$cur wordend"]} {
+                break
+            }
         }
-        if {[$w compare $cur == "$cur wordstart"] && \
-            [$w compare "$cur + $length char" == "$cur wordend"]} {
-            break
+
+        # move cur so that we find next/prev occurrence
+        if {$backwards} {
+            set cur "$cur - 1 char"
+        } else {
+            set cur "$cur + 1 char"
         }
-        set cur "$cur + 1 char"
     }
 
     # check if found
@@ -236,7 +270,7 @@ proc askReplaceYesNo {w} {
 # to the cursor, with replstring, using regexp replace if regexp is nonzero, and case-sensitive
 # is case is nonzero.
 #
-proc _doReplace {w length findstring replstring case regexp} {
+proc _doReplace {w length findstring replstring case regexp backwards} {
 
     if {!$regexp} {
         $w delete "insert - $length char" "insert"
@@ -257,11 +291,11 @@ proc _doReplace {w length findstring replstring case regexp} {
 # doReplace --
 #
 #
-proc doReplace {w findstring replstring case words regexp} {
+proc doReplace {w findstring replstring case words regexp backwards} {
 
     while 1 {
         # find occurrence
-        set length [_doFind $w $findstring $case $words $regexp]
+        set length [_doFind $w $findstring $case $words $regexp $backwards]
         if {$length == ""} {
             tk_messageBox  -title "Find/Replace" -icon warning -type ok -message "'$findstring' not found."
             return
@@ -272,15 +306,15 @@ proc doReplace {w findstring replstring case words regexp} {
 
         case $action in {
             yes {
-                _doReplace $w $length $findstring $replstring $case $regexp
+                _doReplace $w $length $findstring $replstring $case $regexp $backwards
                 syntaxHighlight $w "insert linestart" "insert lineend"
             }
             all {
                 set count 0
                 while {$length != ""} {
-                    _doReplace $w $length $findstring $replstring $case $regexp
+                    _doReplace $w $length $findstring $replstring $case $regexp $backwards
                     incr count
-                    set length [_doFind $w $findstring $case $words $regexp]
+                    set length [_doFind $w $findstring $case $words $regexp $backwards]
                 }
                 syntaxHighlight $w 1.0 end ;# for multi-line replaces...
                 tk_messageBox  -title "Find/Replace" -icon info -type ok -message "$count occurrences of '$findstring' replaced."
